Footer vertical align fix

--- a/css/style.css
+++ b/css/style.css
@@ -736,7 +736,7 @@ textarea {
 }
 
 .index-footer .logo {
-  margin-bottom: 25px;
+  margin: 0 0 25px 0;
 }
 
 .index-footer h3 {
